@@ -12,7 +12,6 @@ import uk.gov.hmcts.reform.civil.service.search.CaseStateSearchService;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.CHANGE_STATE_TO_ADDITIONAL_RESPONSE_TIME_EXPIRED;
 import static uk.gov.hmcts.reform.civil.enums.CaseState.AWAITING_ADDITIONAL_INFORMATION;
@@ -75,7 +74,7 @@ public class GAJudgeRevisitTaskHandler implements BaseExternalTaskHandler {
                 && LocalDate.now().isEqual(caseDetailsConverter.toCaseData(a)
                                                .getJudicialDecisionMakeAnOrderForWrittenRepresentations()
                                                .getSequentialApplicantMustRespondWithin()))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private List<CaseDetails> getDirectionOrderCaseReadyToJudgeRevisit() {
@@ -88,7 +87,7 @@ public class GAJudgeRevisitTaskHandler implements BaseExternalTaskHandler {
                 && LocalDate.now().isEqual(caseDetailsConverter.toCaseData(a)
                                                .getJudicialDecisionMakeOrder()
                                                .getDirectionsResponseByDate()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<CaseDetails> getRequestForInformationCaseReadyToJudgeRevisit() {
@@ -102,7 +101,7 @@ public class GAJudgeRevisitTaskHandler implements BaseExternalTaskHandler {
                 && LocalDate.now().isEqual(caseDetailsConverter.toCaseData(a)
                                                .getJudicialDecisionRequestMoreInfo()
                                                .getJudgeRequestMoreInfoByDate())))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Override
